update my website

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title : Anne Sophie Lassen
 author : Anne Sophie Lassen
   name : Anne Sophie Lassen
   email : assl.eco@cbs.dk
-  github : 
+  github : annesophielassen
   twitter : AnSoLassen
 
 production_url : http://anesophie.github.io
