update my website

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: rouge
 #
 title : Anne Sophie Lassen
 author : Anne Sophie Lassen
-  name : Anne Sophie Lassen
+  name : 
   email : assl.eco@cbs.dk
   github : annesophielassen
   twitter : AnSoLassen
